Fix navbar as it was overlapping on the scroll bar

--- a/src/index.css
+++ b/src/index.css
@@ -131,7 +131,7 @@ body {
 
 
 .container {
-  max-width: 1440px;
+  max-width: 1390px;
   margin: 0 0;
   padding: 0.5rem 2rem;
   /* margin-right: 10rem; */
